--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,23 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+
+/* !------------------------------------Task 3 */
+
+.gallery {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  gap: 20px;
+}
+
+.img-gallery {
+  width: 300px;
+  height: 200px;
+  display: block;
+ 
+  /* display: grid; */
+}
+
+
